fix(tabs): Wrap tab list

--- a/core/src/components/uni-tabs/uni-tabs.scss
+++ b/core/src/components/uni-tabs/uni-tabs.scss
@@ -3,6 +3,7 @@
 }
 .tab-list {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   border-bottom: 2px solid var(--uni-dark);
